recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:2: error: Unit does not take parameters
  carre()
       ^FourSquare:4: error: Unit does not take parameters
  carre()
       ^FourSquare:6: error: Unit does not take parameters
  carre()
       ^FourSquare:8: error: Unit does not take parameters
  carre()
       ^